package com.game_machine.entity_system.generated;


option optimize_for = SPEED;

message ObjectdbGet {
	required string entityId = 1;
}

message ObjectdbPut {
	required Entity entity = 1;
}

message ObjectdbUpdate {
	required string entityId = 1;
	required string updateClass = 2;
	required string updateMethod = 3;
}

message ClientConnection {
	required string id = 1;
	optional string gateway = 2;
}

message ChatMessage {
	required string text = 1;
	required string target = 2;
}

message PlayerLogin {
	required string username = 1;
	required string password = 2;
}


message Player {
	optional int32 x = 1;
	optional int32 y = 2;
	optional int32 z = 3;
	required string id = 4;
	optional string name = 5;
	optional bool authenticated = 6;
	optional string authtoken = 7;
}

message EchoTest {
	required string message = 1;
}
	
message TestObject {
  optional string optionalString = 1;
  required string requiredString = 2;
  repeated int32 numbers = 3;
  optional bytes bstring = 4;
  optional bool bvalue = 5;
  optional double dvalue = 6;
  optional float fvalue = 7;
  optional int64 numbers64 = 8;
  repeated Player player = 9;
  enum Corpus {
    UNIVERSAL = 0;
    WEB = 1;
    IMAGES = 2;
    LOCAL = 3;
    NEWS = 4;
    PRODUCTS = 5;
    VIDEO = 6;
  }
  optional Corpus corpus = 10;
  repeated Corpus corpus2 = 11;
}
  
  
message PlayersAroundMe {
  repeated Player player = 1;
}
	
message GameCommand {
	required string name = 1;
	optional TestObject testObject = 3;
}

message Entity {
	optional Player player = 1;
  	optional PlayersAroundMe playersAroundMe = 2;
  	optional GameCommand gameCommand = 3;
  	optional ChatMessage chatMessage = 4;
  	optional ClientConnection clientConnection = 5;
  	optional EchoTest echoTest = 6;
  	required string id = 7;
  	optional PlayerLogin playerLogin = 8;
}

message EntityList {
	repeated Entity entity = 1;
	optional Player player = 2;
}
